unpackaged/main/default/objects/CampaignMember/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to either the Campaign Member's Contact's Account or the Lead's Account (as matched by LeanData). It is populated by a scheduled Flow.</description>
    <inlineHelpText>This field looks up to either the Campaign Member's Contact's Account or the Lead's Account (as matched by LeanData). It is populated by a scheduled Flow.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>