unpackaged/main/default/objects/CampaignMember/fields/Account_Owned_by_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Owned_by_Running_User__c</fullName>
    <description>This field was built to help enable some dynamic filters for the Running User on the AE Pipe Dashboard.</description>
    <formula>Matched_Account_Owner__c = $User.FirstName + " " +  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field was built to help enable some dynamic filters for the Running User on the AE Pipe Dashboard.</inlineHelpText>
    <label>Account Owned by Running User</label>
    <type>Checkbox</type>
</CustomField>