unpackaged/main/default/objects/CampaignMember/fields/CFCR_Account_G_Com_Org_Slug__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Account_G_Com_Org_Slug__c</fullName>
    <description>Displays the G.Com Org Slug from the related Account</description>
    <formula>IF(NOT(ISBLANK( ContactId )), (Contact.Account.G_Com_Org_Slug__c) , ( Lead.LeanData__Reporting_Matched_Account__r.G_Com_Org_Slug__c ) )</formula>
    <inlineHelpText>Displays the G.Com Org Slug from the related Account</inlineHelpText>
    <label>Account G.Com Org Slug</label>
    <type>Text</type>
</CustomField>