unpackaged/main/default/objects/CampaignMember/fields/CFCR_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Account_Name__c</fullName>
    <description>Displays the Account Name from the related Account</description>
    <formula>IF(NOT(ISBLANK( ContactId )),(Contact.Account.Name) ,( Lead.LeanData__Reporting_Matched_Account__r.Name ) )</formula>
    <inlineHelpText>Displays the Account Name from the related Account</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>