unpackaged/main/default/objects/CampaignMember/fields/CFCR_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Account_Owner__c</fullName>
    <description>Displays the Account Owner from the related Account</description>
    <formula>IF(NOT(ISBLANK( ContactId )),(Contact.Account.Owner.FirstName  +" "+  Contact.Account.Owner.LastName) , ( Lead.LeanData__Reporting_Matched_Account__r.Owner.FirstName +" "+ Lead.LeanData__Reporting_Matched_Account__r.Owner.LastName ) )</formula>
    <inlineHelpText>Displays the Account Owner from the related Account</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>