unpackaged/main/default/objects/CampaignMember/fields/CFCR_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Account_Type__c</fullName>
    <description>Displays the Account Type from the related Account</description>
    <formula>IF(NOT(ISBLANK( ContactId )), TEXT(Contact.Account.Type) , TEXT( Lead.LeanData__Reporting_Matched_Account__r.Type ) )</formula>
    <inlineHelpText>Displays the Account Type from the related Account</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>