unpackaged/main/default/objects/CampaignMember/fields/CFCR_Actionable__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Actionable__c</fullName>
    <description>True if the response status was opened. Indicates response was actionable.</description>
    <formula>AND(
NOT(
OR(
ISPICKVAL(FCRM__FCR_Response_Status__c,"Resolved - No Action Required"), 
ISPICKVAL(FCRM__FCR_Response_Status__c,"Resolved - Already Engaged"), 
ISPICKVAL(FCRM__FCR_Response_Status__c,"Not a Response"),
ISPICKVAL(FCRM__FCR_Response_Status__c,"Legacy"),  
ISPICKVAL(FCRM__FCR_Response_Status__c,""))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the response status was opened. Indicates response was actionable.</inlineHelpText>
    <label>Actionable</label>
    <type>Checkbox</type>
</CustomField>