unpackaged/main/default/objects/CampaignMember/fields/CFCR_Active_Status_Reactivation__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Active_Status_Reactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the active status reactivation scenario</description>
    <inlineHelpText>Set by the active status reactivation scenario</inlineHelpText>
    <label>Active Status Reactivation</label>
    <type>Checkbox</type>
</CustomField>