unpackaged/main/default/objects/CampaignMember/fields/CFCR_Active_Status_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Active_Status_Reactivation_Date__c</fullName>
    <description>Date active status reactivation fired</description>
    <inlineHelpText>Date active status reactivation fired</inlineHelpText>
    <label>Active Status Reactivation Date</label>
    <type>DateTime</type>
</CustomField>