unpackaged/main/default/objects/CampaignMember/fields/CFCR_Admin_Defective_Member__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Admin_Defective_Member__c</fullName>
    <description>Campaign Member references a lead that is converted instead of the contact record - member cannot be updated and is considered defective.</description>
    <formula>AND( 
BEGINS(FCRM__FCR_Lead_Contact_18_Digit_ID__c, '00Q'), 
OR( 
Lead.Id = NULL, 
Lead.IsConverted = True) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campaign Member references a lead that is converted instead of the contact record - member cannot be updated and is considered defective.</inlineHelpText>
    <label>Admin Defective Member</label>
    <type>Checkbox</type>
</CustomField>