unpackaged/main/default/objects/CampaignMember/fields/CFCR_Admin_HQL_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Admin_HQL_Date__c</fullName>
    <description>Set by workflow rule when the response status is set to Sales Ready</description>
    <inlineHelpText>Set by workflow rule when the response status is set to Sales Ready</inlineHelpText>
    <label>Admin HQL Date</label>
    <type>DateTime</type>
</CustomField>