unpackaged/main/default/objects/CampaignMember/fields/CFCR_Admin_MAE_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Admin_MAE_Date__c</fullName>
    <description>Displays Reactivation Date if populated else First Reactivation Date else Response Date - Used by FCI funnels to set the MAE Date</description>
    <formula>IF (NOT (ISBLANK ( FCRM__FCR_Reactivation_Date__c   )), FCRM__FCR_Reactivation_Date__c ,
 IF (NOT (ISBLANK ( CFCR_First_Reactivation_Date__c  )), CFCR_First_Reactivation_Date__c,
 FCRM__FCR_Response_Date__c ))</formula>
    <inlineHelpText>Displays Reactivation Date if populated else First Reactivation Date else Response Date - Used by FCI funnels to set the MAE date</inlineHelpText>
    <label>Admin MAE Date</label>
    <type>DateTime</type>
</CustomField>