unpackaged/main/default/objects/CampaignMember/fields/CFCR_Current_Stage_in_Funnel__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Current_Stage_in_Funnel__c</fullName>
    <description>indicates if a response is active in the funnel or not.</description>
    <formula>IF ( 
OR( 
ISPICKVAL(FCRM__FCR_Response_Status__c, "" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Non Opt-In (Illegal)" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Existing Opportunity" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Unable to Connect" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "On Hold" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Customer" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Opportunity Lost" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Disqualified" ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - No Action Required" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - Existing Opportunity" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - Merged" ),   
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - Already Engaged" ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - Opportunity Deleted" ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - Opportunity Lost" ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, "Resolved - Opportunity Won" ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, "Unmapped" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Legacy" ),
ISPICKVAL(FCRM__FCR_Response_Status__c, "Default" ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, "Not a Response")),"Not Active in Funnel" , 
IF( FCRM__FCR_SQR__c = TRUE, "OPP",
IF( CFCR_SCL__c = TRUE, "SCL",
IF( FCRM__FCR_SAR__c = TRUE, "SAL", 
IF( FCRM__FCR_QR__c = TRUE, "HQL", 
IF( FCRM__FCR_Inquiry_Target__c = TRUE, "Inquiry", 
"UNDEFINED") 
)))))</formula>
    <inlineHelpText>indicates if a response is active in the funnel or not.</inlineHelpText>
    <label>Current Stage in Funnel</label>
    <type>Text</type>
</CustomField>