unpackaged/main/default/objects/CampaignMember/fields/CFCR_DQ__c.field-meta.xml
<CustomField>
    <fullName>CFCR_DQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DQ</label>
    <type>Checkbox</type>
</CustomField>