unpackaged/main/default/objects/CampaignMember/fields/CFCR_DQ_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_DQ_Date__c</fullName>
    <label>DQ Date</label>
    <type>Date</type>
</CustomField>