unpackaged/main/default/objects/CampaignMember/fields/CFCR_FCCRM_Threshold_Current__c.field-meta.xml
<CustomField>
    <fullName>CFCR_FCCRM_Threshold_Current__c</fullName>
    <description>Current FCCRM Threshold score on the related lead/contact record</description>
    <formula>IF(NOT(ISBLANK( ContactId )), Contact.CFCR_FCCRM_Threshold__c ,Lead.CFCR_FCCRM_Threshold__c )</formula>
    <inlineHelpText>Current FCCRM Threshold score on the related lead/contact record</inlineHelpText>
    <label>FCCRM Threshold (Current)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>