unpackaged/main/default/objects/CampaignMember/fields/CFCR_First_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_First_Reactivation_Date__c</fullName>
    <description>Set by Workflow when clearing the Reactivation Date - Used to set HQL Date based on Admin HQL Date field</description>
    <inlineHelpText>Set by Workflow when clearing the Reactivation Date - Used to set HQL Date based on Admin HQL Date field</inlineHelpText>
    <label>First Reactivation Date</label>
    <type>DateTime</type>
</CustomField>