unpackaged/main/default/objects/CampaignMember/fields/CFCR_Hold__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>