unpackaged/main/default/objects/CampaignMember/fields/CFCR_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Hold_Date__c</fullName>
    <label>Hold Date</label>
    <type>Date</type>
</CustomField>