unpackaged/main/default/objects/CampaignMember/fields/CFCR_HQL_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>CFCR_HQL_Owner_Role__c</fullName>
    <label>HQL Owner Role</label>
    <length>125</length>
    <type>Text</type>
</CustomField>