unpackaged/main/default/objects/CampaignMember/fields/CFCR_HQL_to_Won__c.field-meta.xml
<CustomField>
    <fullName>CFCR_HQL_to_Won__c</fullName>
    <description>Days between HQL and Won</description>
    <formula>IF( FCRM__FCR_Opportunity_Closed_Won__c = "True", FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_QR_Date__c , null)</formula>
    <inlineHelpText>Days between HQL and Won</inlineHelpText>
    <label>HQL to Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>