unpackaged/main/default/objects/CampaignMember/fields/CFCR_Lead_Score_On_Create__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Lead_Score_On_Create__c</fullName>
    <description>Synced on create - Lead Score when the response was created.</description>
    <inlineHelpText>Synced on create - Lead Score when the response was created.</inlineHelpText>
    <label>Lead Score (On Create)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>