unpackaged/main/default/objects/CampaignMember/fields/CFCR_Lead_Score_On_Update__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Lead_Score_On_Update__c</fullName>
    <description>Synced on Update - Most recent lead score during the time a response is active.</description>
    <inlineHelpText>Synced on Update - Most recent lead score during the time a response is active.</inlineHelpText>
    <label>Lead Score (On Update)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>