unpackaged/main/default/objects/CampaignMember/fields/CFCR_MAE__c.field-meta.xml
<CustomField>
    <fullName>CFCR_MAE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MAE</label>
    <type>Checkbox</type>
</CustomField>