unpackaged/main/default/objects/CampaignMember/fields/CFCR_MAE_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_MAE_Date__c</fullName>
    <label>MAE Date</label>
    <type>Date</type>
</CustomField>