unpackaged/main/default/objects/CampaignMember/fields/CFCR_Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Manual_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrative field - set to true if you are doing a manual update and want the audit trail</description>
    <inlineHelpText>Administrative field - set to true if you are doing a manual update and want the audit trail</inlineHelpText>
    <label>Manual Adjustment</label>
    <type>Checkbox</type>
</CustomField>