unpackaged/main/default/objects/CampaignMember/fields/CFCR_Manual_Adjustment_Notes__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Manual_Adjustment_Notes__c</fullName>
    <description>Any administrative notes on the reason for the manual adjustment.</description>
    <inlineHelpText>Any administrative notes on the reason for the manual adjustment.</inlineHelpText>
    <label>Manual Adjustment Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>