unpackaged/main/default/objects/CampaignMember/fields/CFCR_OPP_User_Role__c.field-meta.xml
<CustomField>
    <fullName>CFCR_OPP_User_Role__c</fullName>
    <label>OPP Created by Role</label>
    <length>125</length>
    <type>Text</type>
</CustomField>