unpackaged/main/default/objects/CampaignMember/fields/CFCR_Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Opportunity_Partner__c</fullName>
    <description>Displays the Partner from the related Opportunity</description>
    <formula>FCRM__FCR_Opportunity__r.Partner__c</formula>
    <inlineHelpText>Displays the Partner from the related Opportunity</inlineHelpText>
    <label>Opportunity Partner</label>
    <type>Text</type>
</CustomField>