unpackaged/main/default/objects/CampaignMember/fields/CFCR_Opportunity_SE_Owner__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Opportunity_SE_Owner__c</fullName>
    <description>Displays the SE Owner from the related Opportunity</description>
    <formula>FCRM__FCR_Opportunity__r.SE_Owner__r.FirstName +" "+ FCRM__FCR_Opportunity__r.SE_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the SE Owner from the related Opportunity</inlineHelpText>
    <label>Opportunity SE Owner</label>
    <type>Text</type>
</CustomField>