unpackaged/main/default/objects/CampaignMember/fields/CFCR_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Opportunity_Type__c</fullName>
    <description>Displays type of related opportunity if opportunity name is populated.</description>
    <formula>TEXT( FCRM__FCR_Opportunity__r.Type )</formula>
    <inlineHelpText>Displays type of related opportunity if opportunity name is populated.</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>