unpackaged/main/default/objects/CampaignMember/fields/CFCR_S0__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S0__c</fullName>
    <formula>FCRM__FCR_Opportunity__r.CFCR_S0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S0</label>
    <type>Checkbox</type>
</CustomField>