unpackaged/main/default/objects/CampaignMember/fields/CFCR_S0_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S0_Date__c</fullName>
    <formula>FCRM__FCR_Opportunity__r.CFCR_S0_Date__c</formula>
    <label>S0 Date</label>
    <type>Date</type>
</CustomField>