unpackaged/main/default/objects/CampaignMember/fields/CFCR_S1_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S1_Date__c</fullName>
    <formula>FCRM__FCR_Opportunity__r.CFCR_S1_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S1 Date</label>
    <type>Date</type>
</CustomField>