unpackaged/main/default/objects/CampaignMember/fields/CFCR_S2__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S2__c</fullName>
    <formula>FCRM__FCR_Opportunity__r.CFCR_S2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S2</label>
    <type>Checkbox</type>
</CustomField>