unpackaged/main/default/objects/CampaignMember/fields/CFCR_S2_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_S2_Date__c</fullName>
    <formula>FCRM__FCR_Opportunity__r.CFCR_S2_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S2 Date</label>
    <type>Date</type>
</CustomField>