unpackaged/main/default/objects/CampaignMember/fields/CFCR_SAL_to_SCL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_SAL_to_SCL__c</fullName>
    <description># Days from SAL to SCL - Evaluates to blank if SCL Date is blank.</description>
    <formula>CFCR_SCL_Date__c -  FCRM__FCR_SAR_Date__c</formula>
    <inlineHelpText># Days from SAL to SCL</inlineHelpText>
    <label>SAL to SCL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>