unpackaged/main/default/objects/CampaignMember/fields/CFCR_SCL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_SCL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set if this is a Sales in Contact status progression (sync from lead/ contact)</description>
    <label>SCL</label>
    <type>Checkbox</type>
</CustomField>