unpackaged/main/default/objects/CampaignMember/fields/CFCR_SCL_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_SCL_Date__c</fullName>
    <description>SCL response date</description>
    <label>SCL Date</label>
    <type>Date</type>
</CustomField>