unpackaged/main/default/objects/CampaignMember/fields/CFCR_SCL_to_OPP__c.field-meta.xml
<CustomField>
    <fullName>CFCR_SCL_to_OPP__c</fullName>
    <description># Days from SCL to OPP - Evaluates to blank if OPP Date is blank.</description>
    <formula>FCRM__FCR_SQR_Date__c -  CFCR_SCL_Date__c</formula>
    <inlineHelpText># Days SCL to OPP</inlineHelpText>
    <label>SCL to OPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>