unpackaged/main/default/objects/CampaignMember/fields/CFCR_SRL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_SRL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SRL</label>
    <type>Checkbox</type>
</CustomField>