unpackaged/main/default/objects/CampaignMember/fields/CFCR_SRL_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_SRL_Date__c</fullName>
    <label>SRL Date</label>
    <type>Date</type>
</CustomField>