unpackaged/main/default/objects/CampaignMember/fields/CFCR_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Status_Reason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>