unpackaged/main/default/objects/CampaignMember/fields/CFCR_Still_in_HQL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_HQL__c</fullName>
    <description>Checked if Current Stage in Funnel is "HQL"</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = "HQL"</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is "HQL"</inlineHelpText>
    <label>Still in HQL</label>
    <type>Checkbox</type>
</CustomField>