unpackaged/main/default/objects/CampaignMember/fields/CFCR_Still_in_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_Inquiry__c</fullName>
    <description>Checked if Current Stage in Funnel is "Inquiry"</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = "Inquiry"</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is "Inquiry"</inlineHelpText>
    <label>Still in Inquiry</label>
    <type>Checkbox</type>
</CustomField>