unpackaged/main/default/objects/CampaignMember/fields/CFCR_Still_in_OPP__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_OPP__c</fullName>
    <description>Checked if Current Stage in Funnel is "OPP"</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = "OPP"</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is "OPP"</inlineHelpText>
    <label>Still in OPP</label>
    <type>Checkbox</type>
</CustomField>