unpackaged/main/default/objects/CampaignMember/fields/CFCR_Still_in_SAL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_SAL__c</fullName>
    <description>Checked if Current Stage in Funnel is "SAL"</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = "SAL"</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is "SAL"</inlineHelpText>
    <label>Still in SAL</label>
    <type>Checkbox</type>
</CustomField>