unpackaged/main/default/objects/CampaignMember/fields/CFCR_Still_in_SCL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_SCL__c</fullName>
    <description>Checked if Current Stage in Funnel is "SCL"</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = "SCL"</formula>
    <label>Still in SCL</label>
    <type>Checkbox</type>
</CustomField>