unpackaged/main/default/objects/CampaignMember/fields/CFCR_UTC__c.field-meta.xml
<CustomField>
    <fullName>CFCR_UTC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UTC</label>
    <type>Checkbox</type>
</CustomField>