unpackaged/main/default/objects/CampaignMember/fields/CFCR_UTC_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_UTC_Date__c</fullName>
    <label>UTC Date</label>
    <type>Date</type>
</CustomField>