unpackaged/main/default/objects/CampaignMember/fields/Cloud_Trial__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Trial__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)), Contact.Cloud_Trial__c  , Lead.Cloud_Trial__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Trial</label>
    <type>Checkbox</type>
</CustomField>