unpackaged/main/default/objects/CampaignMember/fields/Combo_UTM__c.field-meta.xml
<CustomField>
    <fullName>Combo_UTM__c</fullName>
    <label>Combo UTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>