unpackaged/main/default/objects/CampaignMember/fields/Contact_Topic__c.field-meta.xml
<CustomField>
    <fullName>Contact_Topic__c</fullName>
    <label>Contact Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSS Grafana</fullName>
            </value>
            <value>
                <fullName>Grafana Enterprise</fullName>
            </value>
            <value>
                <fullName>Grafana Cloud</fullName>
            </value>
            <value>
                <fullName>Grafana Cloud Trial</fullName>
            </value>
            <value>
                <fullName>Grafana Logs Enterprise</fullName>
            </value>
            <value>
                <fullName>Grafana Metrics Enterprise</fullName>
            </value>
            <value>
                <fullName>Plugins</fullName>
            </value>
            <value>
                <fullName>worldPing</fullName>
            </value>
            <value>
                <fullName>EU Metrics</fullName>
            </value>
            <value>
                <fullName>Resellers: Deal Registration</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Grafana Enterprise Metrics</fullName>
            </value>
            <value>
                <fullName>Grafana Enterprise Logs</fullName>
            </value>
            <value>
                <fullName>Grafana Enterprise Stack</fullName>
            </value>
            <value>
                <fullName>Grafana Enterprise Traces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>