unpackaged/main/default/objects/CampaignMember/fields/Contact_Topic_Plugin_Value__c.field-meta.xml
<CustomField>
    <fullName>Contact_Topic_Plugin_Value__c</fullName>
    <label>Contact Topic - Plugin Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>