unpackaged/main/default/objects/CampaignMember/fields/Country2__c.field-meta.xml
<CustomField>
    <fullName>Country2__c</fullName>
    <formula>IF( ISBLANK(ContactId) , 
IF( ISBLANK(Lead.Matched_Account_Billing_Country__c),   
IF( ISBLANK(Lead.Country), Lead.mkto71_Inferred_Country__c, Lead.Country), 
Lead.Matched_Account_Billing_Country__c), 
 
 Contact.Account.BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>