unpackaged/main/default/objects/CampaignMember/fields/CR_Owner__c.field-meta.xml
<CustomField>
    <fullName>CR_Owner__c</fullName>
    <formula>IF(ISBLANK (  CFCR_OPP_User__c  ), 

(IF(NOT(ISBLANK( ContactId )),  Contact.Owner.FirstName+ " " +Contact.Owner.LastName,  Lead.Owner:User.FirstName+ " " +Lead.Owner:User.LastName)),

 CFCR_OPP_User__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CR Owner</label>
    <type>Text</type>
</CustomField>