unpackaged/main/default/objects/CampaignMember/fields/Data_Sources__c.field-meta.xml
<CustomField>
    <fullName>Data_Sources__c</fullName>
    <label>Data Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>