unpackaged/main/default/objects/CampaignMember/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <formula>IF(  ISBLANK(ContactId) , IF(  ISBLANK(Lead.Matched_Account_No_of_Employees__c),  Lead.NumberOfEmployees, Lead.Matched_Account_No_of_Employees__c) ,   Contact.Account.NumberOfEmployees  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>