unpackaged/main/default/objects/CampaignMember/fields/End_User_Companyy_Na__c.field-meta.xml
<CustomField>
    <fullName>End_User_Companyy_Na__c</fullName>
    <formula>Lead.End_User_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Company Name</label>
    <type>Text</type>
</CustomField>