unpackaged/main/default/objects/CampaignMember/fields/External_Combo_UTM__c.field-meta.xml
<CustomField>
    <fullName>External_Combo_UTM__c</fullName>
    <label>External Combo UTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>