unpackaged/main/default/objects/CampaignMember/fields/External_URL_Referrer__c.field-meta.xml
<CustomField>
    <fullName>External_URL_Referrer__c</fullName>
    <label>External URL Referrer</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>