unpackaged/main/default/objects/CampaignMember/fields/Form_URL2__c.field-meta.xml
<CustomField>
    <fullName>Form_URL2__c</fullName>
    <label>Form URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>