unpackaged/main/default/objects/CampaignMember/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <formula>IF(ISBLANK( Country2__c ), "No Country", 

IF( Country2__c = "United States", "US", "INTL"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo</label>
    <type>Text</type>
</CustomField>