unpackaged/main/default/objects/CampaignMember/fields/Grafana_Cloud_Trial_status__c.field-meta.xml
<CustomField>
    <fullName>Grafana_Cloud_Trial_status__c</fullName>
    <description>Grafana cloud trial status</description>
    <label>Trial status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Converted into paid</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Ending soon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>