unpackaged/main/default/objects/CampaignMember/fields/HQL_datetime__c.field-meta.xml
<CustomField>
    <fullName>HQL_datetime__c</fullName>
    <formula>DATETIMEVALUE(FCRM__FCR_QR_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQL datetime</label>
    <type>DateTime</type>
</CustomField>